# Jank-Wars-Google-Hackaton-2025

./: Cargo.toml  DEVELOPMENT.md  DEVELOPMENT_STATUS.md  GAME_DESIGN.md  GAME_VISION.md  HAND_TRACKING_IMPROVEMENTS.md  HAND_TRACKING_SETUP.md  LLM_CONTEXT.md  README.md  TECHNICAL_ARCHITECTURE.md  TECHNICAL_DOCS.md  download_models.sh  flake.nix  index.html  package-lock.json  package.json  test-3d.html  verify_models.sh  vite.config.js
assets/: index-B5GaLaSH.js  index-bXtk1Lqv.js
models/: palm_detection.onnx
src/: debug_ui.rs  environment.rs  gestures.rs  hand_tracking.rs  main-simple.js  main-test.js  main.js  main.rs  physics.rs  player.rs  style.css
src/core/: GameState.js  HandTrackingController.js  PhysicsController.js  WebcamController.js
src/game/: GameLoop.js  Spider.js  SpiderController.js
src/systems/: GameWorldSystem.js  HandTrackingSystem.js  SpiderControlSystem.js
src/utils/: DebugDisplay.js  HandDataProcessor.js  HandDebugRenderer.js  IKSolver.js  PalmCoordinateSystem.js  SimpleLowPassFilter.js
