[package]
name = "jank_wars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13"
bevy_rapier3d = { version = "0.25.0", features = [ "debug-render-3d" ] } # For 3D physics and debug rendering
bevy-inspector-egui = "0.24.0" # For runtime inspector
nokhwa = { version = "0.10", features = ["input-v4l", "output-threaded"] } # Webcam access for Linux
image = { version = "0.24", features = ["jpeg", "png"] } # For image processing

# MediaPipe Hand Tracking with ONNX Runtime
ort = "1.16" # ONNX Runtime for MediaPipe model inference
ndarray = "0.15" # N-dimensional arrays for tensor operations

